syntax = "proto3";
package pbclient;
//option go_package = "trcell/pkg/pb/pbclient";
option go_package = "./pbclient";

// ECMsgBaseWrapOpt = 255 // 预留的特殊协议(客户端不用,主要预留给机器人测试)
message ECMsgBaseWrapOptReq
{
    int32 MsgClass = 1;
    int32 MsgType = 2;
    bytes Data = 3;
    int32 ReqID = 4;
    
}
message ECMsgBaseWrapOptRsp
{
    int32 MsgClass = 1;
    int32 MsgType = 2;
    bytes Data = 3;
    int32 AckID = 4;
    int32 ErrCode = 5;
}